# Exam-manager-API

./: README.md
controller/: Dockerfile  ExamManagerAPI.json  README.md  docker-compose.yml  pyproject.toml
controller/core/: __init__.py  celery.py  settings.py  urls.py
controller/exams/: admin.py  api.py  documents.py  models.py  schemas.py  tasks.py  tests.py  urls.py
controller/exams/migrations/: 0001_initial.py  0002_initial.py  0003_alter_choice_options_and_more.py  0004_alter_participant_unique_together.py
controller/users/: admin.py  api.py  models.py  pagination.py  schemas.py  tests.py  urls.py
controller/users/migrations/: 0001_initial.py  0002_remove_user_groups_remove_user_user_permissions_and_more.py
