[project]
name = "controller"
version = "0.1.0"
description = ""
authors = [
    {name = "Djalma Felipe",email = "felipedjalma10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "ninja (>=1.11.1.4,<2.0.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "django-elasticsearch-dsl (>=8.0,<9.0)",
    "elasticsearch-dsl (>=8.17.1,<9.0.0)",
    "django-ninja (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[tool.poetry]
package-mode = false

